"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-03-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-05-parser-06-03:
	  Mission accomplished.
	  Deleted rotten pasta code with opening temporary files for
		parsing, by replacing with string-initialized lexer-state.
		Wish code could be this elegant more often.  
		Net reduction in line count!
		Files: parser/instref.cc parser/type.cc


	* HACKT-00-01-04-main-00-82-05-parser-06-02:
	  Makefile.am purge-ry, parser surgery, config patchery.
	  configury: test minimalist example to determine properties
		of the chosen parser generator.
		e.g. no longer need MINIMUM_BOGOSITY token
		Now have a proper yacc skeleton version string.
	  Makefile.am: clean-up, better script re-use for maintainence, 
		eliminating eye-sore duplicates
	  lexer/*.ll: remove all references to yywrap and *_at_eof.
	  parser/*.yy.in: eliminate MINIMUM_BOGOSITY placeholder, 
		replace MAXUMIN_BOGOSITY with YYMAXTOKEN, aliases
		to YYMAXUTOK for bison.
	  Next: rewrite string parse calls.


2008-03-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-05-parser-06-01:
	  New branch for invasive changes to lexers.  
	  Extract code common to all generated lexers with 
		lexer/flex_common_marker.patch and sed script.
	  Makefile.am: some clean-up and re-use of script variables.
		Generation of lexer/*-real.cc updated to use new patch.
		NOTE: all lexer/*-lex-real.cc use the same patch!
	  util/lang/lexyacc/lexyacc-prefix-generator.awk:
		new option -v keep_common to NOT transform selected
		symbols to make use of common-extracted functions.
	  lexer/*.ll: replace *_at_eof() with flex_lexer_state::at_eof().
	  automatically extract lexer/flex_buffer_state.h struct definition.
	  Next: continued clean-up and also re-write of string parse calls.