@@ -3,6 +3,14 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2008-03-09	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-82-05-parser-06-04:
+	  lexer/flex_common_marker.patch:
+		updated and validated against older bison-1.875.
+	  Makefile.am: added dependencies on patch file.
+
+
 2008-03-02	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-82-05-parser-06-03:
